--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<header class="site-header">
 		<div class="container header-inner">
 			<nav aria-label="ヘッダーナビゲーション" class="header-nav">
-				<a href="./Home.html" class="nav-button site-name">Unity備忘録</a>
+				<a href="./index.html" class="nav-button site-name">Unity備忘録</a>
 				<a href="#articles" class="nav-button">記事一覧</a>
 				<a href="#about" class="nav-button">About</a>
 			</nav>
